# tpca

./: .gitignore  CLAUDE.md  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  README.md  demo_phase1.py  demo_phase2.py  demo_phase3.py  pyproject.toml  requirements.txt
.tpca_cache/index/: 699a64b79bd0aecb.json  e3502f61098b652d.json  e3dae5a9a4a7bbf9.json  manifest.json
.tpca_cache_phase3/index/: 699a64b79bd0aecb.json  8c5a626dd4e1f3e5.json  ab9b04b564aafa4b.json  e3502f61098b652d.json  e3dae5a9a4a7bbf9.json  e7cae4e8e3a297d5.json  manifest.json
prism/: __init__.py  config.py  orchestrator.py  session_manager.py
prism/cache/: __init__.py  index_cache.py
prism/cli/: __init__.py  main.py
prism/fallback/: CLAUDE.md  __init__.py  chunked_pipeline.py  memory_store.py  reader_agent.py
prism/llm/: CLAUDE.md  __init__.py  capability.py  client.py
prism/logging/: __init__.py  log_config.py  structured_logger.py
prism/models/: __init__.py  output.py  slice.py  symbol.py
prism/pass1/: CLAUDE.md  ast_indexer.py  graph_builder.py  graph_ranker.py  index_renderer.py
prism/pass2/: CLAUDE.md  context_planner.py  output_writer.py  synthesis_agent.py
prism/plan/: evaluator_agent.py  plan_model.py  plan_store.py  planner_agent.py  sub_planner_agent.py
tests/: CLAUDE.md  test_context_planner.py  test_fallback.py  test_llm_client.py  test_multi_language.py  test_output_chunker.py  test_phase1.py  test_repl.py  test_resume.py  test_session_manager.py  test_slice_fetcher.py  test_spec_compliance.py  test_synthesis_agent.py  test_worker_agent.py
tpca/: __init__.py  config.py  orchestrator.py  session_manager.py
tpca.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+65 files in other folders)
