[build-system]
   requires = ["setuptools>=45", "wheel"]
   build-backend = "setuptools.build_meta"

   [project]
   name = "prism"
   version = "0.1.0.dev1"
   description = "PageRank-indexed, Symbol-aware Model - AST-Driven, Graph-Ranked Context Retrieval"
   requires-python = ">=3.8"
   dependencies = [
       "tree-sitter>=0.20.0",
       "click>=8.0.0",
       "prompt_toolkit>=3.0",
   ]

   [project.optional-dependencies]
   dev = [
       "pytest>=7.0.0",
       "pytest-cov>=4.0.0",
   ]

   [project.scripts]
   prism = "prism.cli.main:main"

   [tool.setuptools.packages.find]
   where = ["."]
   include = ["prism*"]
   exclude = ["tests*"]

   [tool.pytest.ini_options]
   testpaths = ["tests"]
   python_files = ["test_*.py"]
   python_classes = ["Test*"]
   python_functions = ["test_*"]